Bug 84536 - FILEOPEN: RTF import causing "general error"
Summary: FILEOPEN: RTF import causing "general error"
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.2.4.2 release
Hardware: Other All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:4.4.0
Keywords: bibisectRequest, filter:rtf, regression
Depends on:
Blocks: RTF
  Show dependency treegraph
 
Reported: 2014-09-30 22:24 UTC by Luke
Modified: 2015-12-17 10:47 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
RTF causing General Error (160.28 KB, application/rtf)
2014-09-30 22:24 UTC, Luke
Details
DOCX file imports OK (36.20 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-09-30 22:25 UTC, Luke
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Luke 2014-09-30 22:24:01 UTC
Created attachment 107159 [details]
RTF causing General Error

Using Word 2013, I tried to create a stripped-down test doc for Bug 84534. The resulting document opens fine in Word, but in Writer gives:
General Error. 
General input/output error.
Comment 1 Luke 2014-09-30 22:25:38 UTC
Created attachment 107160 [details]
DOCX file imports OK
Comment 2 Yousuf Philips (jay) (retired) 2014-09-30 23:52:53 UTC
Confirmed in 4.2.6, 4.3.3 and master. Regression as it opens fine in 4.1.6.

Version: 4.4.0.0.alpha0+
Build ID: 425711faddb208efa97e869b885919fff9e570d0
TinderBox: Linux-rpm_deb-x86@45-TDF, Branch:master, Time: 2014-09-27_02:35:29
Comment 3 Luke 2014-10-01 00:31:39 UTC
Added Miklos since I believe he worked on 4.2's new RTF filter. Feel free to remove if I'm in error.
Comment 4 Commit Notification 2014-10-01 15:23:22 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=53b9a9bc7c84738545b5c7b791cea1e3d6a16c72

fdo#84536 RTF import: don't try to rotate TextFrames



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Miklos Vajna 2014-10-01 15:39:39 UTC
libreoffice-4-3 review: https://gerrit.libreoffice.org/11746
Comment 6 Robinson Tryon (qubit) 2015-12-17 10:47:02 UTC
Migrating Whiteboard tags to Keywords: (bibisectRequest, filter:rtf)
Remove redundant 'rtf_filter'.
[NinjaEdit]