fdo#84536 RTF import: don't try to rotate TextFrames

Regression from 818d80eb0cee65d1bcc4fdb74b32a7c42cc1336e (RTF import:
support shapes inside tables, 2013-06-28).

Change-Id: I05eb2f4f2e3467e35f96b280e3a79f69906a56de